--- a/index.html
+++ b/index.html
@@ -190,26 +190,100 @@
   </div>
   <div class="container d-flex justify-content-around align-items-center">
     <div>
-      <h1>1500</h1>
+      <h1 class="count">1500</h1>
       <p>CMS Installation</p>
     </div>
     <div>
-      <h1>1500</h1>
+      <h1 class="count">700</h1>
       <p>CMS Installation</p>
     </div>
     <div>
-      <h1>1500</h1>
+      <h1 class="count">1250</h1>
       <p>CMS Installation</p>
     </div>
     <div>
-      <h1>1500</h1>
+      <h1 class="count">560</h1>
       <p>CMS Installation</p>
     </div>
   </div>
 </section>
        <!-- Project Done Ends  -->
+
+<!-- Our Pricing  -->
+
+<section class="pricing" id="pricingdiv">
+  <div class="container headings text-center">
+    <h1 class="text-center font-weight-bold text-uppercase text-white">Our Pricing</h1>  
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-12">
+        <div class="card text-center">
+          <div class="card-header text-capitalize">Basic</div>
+          <div class="card-body">
+            <li>$ <span class="money">20</span>/website</li>
+            <li>Responsive Website</li>
+            <li>Domain Name Free</li>
+            <li> Mobile Friendly</li>
+            <li> Webmail Support</li>
+            <li> Customer Support 24/7</li>
+          </div>
+          <div class="card-footer">
+            <a href="#">Purchase</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-12 card-second">
+        <div class="card text-center ">
+          <div class="card-header text-capitalize">Standard</div>
+          <div class="card-body">
+            <li>$ <span class="money">40</span>/website</li>
+            <li>Responsive Website</li>
+            <li>Domain Name Free</li>
+            <li> Mobile Friendly</li>
+            <li> Webmail Support</li>
+            <li> Customer Support 24/7</li>
+          </div>
+          <div class="card-footer">
+            <a href="#">Purchase</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-12">
+        <div class="card text-center">
+          <div class="card-header text-capitalize">Unlimited</div>
+          <div class="card-body">
+            <li>$ <span class="money">60</span>/website</li>
+            <li>Responsive Website</li>
+            <li>Domain Name Free</li>
+            <li> Mobile Friendly</li>
+            <li> Webmail Support</li>
+            <li> Customer Support 24/7</li>
+          </div>
+          <div class="card-footer">
+            <a href="#">Purchase</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+ <!-- Pricing ENds  -->
+
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js" integrity="sha512-fHXRw0CXruAoINU11+hgqYvY/PcsOWzmj0QmcSOtjlJcqITbPyypc8cYpidjPurWpCnlB8VKfRwx6PIpASCUkQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js" integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha512-bnIvzh6FU75ZKxp0GXLH9bewza/OIw6dLVh9ICg0gogclmYGguQJWl8U30WpbsGTqbIiAwxTsbe76DErLq5EDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      $('.count').counterUp({
+        delay:10,
+        time: 3000 //3s
+      })
+    </script>
 </body>
 </html>
